# venushacks

./: .eslintcache  README.md  package-lock.json  package.json
backend/: pyproject.toml  requirements.txt
backend/app/: api.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  landing.css  landing.html  profile.css  profile.html
frontend/src/components/: App.js  Landing.js  Profile.js  Signin.js  Task.js  TaskComponent.js  WishList.js  fire.js  profiledash.js
frontend/src/styles/: SignIn.css  Task.scss  WishList.css  _properties.scss  landing.css  profiledash.css
src/: App.js
src/components/: App.js  Landing.js  Login.js  Profile.js  Signin.js  Status.js  Task.js  TaskComponent.js  WishList.js  companyInfo.js
src/styles/: App.scss  SignIn.css  Task.scss  WishList.css  landing.css  profiledash.css
