[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["billop <12755239+billop@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
